--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ dist: xenial
 sudo: false
 
 branches:
-  only:
-    - master
+  except:
+  - ___TGS3TempBranch
+  - ___TGSTempBranch
 
 matrix:
   include:
